--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,63 @@
 // Import page-specific CSS files here.
 @import "home";
+
+h3 {
+  font-size: 30px;
+}
+
+ul.row {
+  list-style-type: none;
+  padding-left: 0px;
+  margin: 0px;
+}
+
+.card-category {
+  background-size: cover;
+  background-position: center;
+  height: 180px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 22px;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  opacity: 0.9;
+
+  a {
+    color: #FFFFFF;
+    text-decoration: none;
+  }
+
+  &:hover {
+    box-shadow: 1px 1px 12px 6px rgba(0, 0, 0, .4);
+    opacity: 1;
+  }
+}
+
+.container {
+  margin: 30px auto; width: 970px;
+}
+
+.banner {
+  background-size: cover;
+  background-position: center;
+  padding: 150px 0;
+}
+
+.banner h1 {
+  margin: 0;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.banner p {
+  font-size: 20px;
+  color: white;
+  opacity: .7;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
