--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,12 +3,9 @@
   <%= link_to "#", class: "navbar-brand" do %>
     <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
     <% end %>
-
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
@@ -35,7 +32,7 @@
     <% @list.bookmarks.each do |bookmark| %>
       <div class="mb-4">
         <div class="card h-100" style="width: 28rem;">
-          <img src="<%= image_path("batman.jpg") %>" style="height: 15rem;" class="card-img-top" alt="batman">
+          <%= cl_image_tag bookmark.photo.key, height: 300, width: 446, crop: :fill %>
           <div class="card-body d-flex flex-column justify-content-between">
             <div>
               <h5 class="card-title"><%= "#{bookmark.movie[:title]}" %></h5>
