--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,8 +1,2 @@
-.card-text {
-  font-size: 15px;
-}
-
-.card-img-top {
-  object-fit: cover;
-  object-position: 50% 25%;
-}
+@import "../components/_button";
+@import "../components/_card";
