--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,21 +3,30 @@
   <div class="container">
     <h1><strong>The Movie DB</strong>!</h1>
     <p>The best movies in the world - not even kidding, we have like 10 in our DB.</p>
-    <a class="btn btn-primary" href="#">Select a random list</a>
+    <a class="btn btn-success" href="#">Select a random list</a>
   </div>
 </div>
 
 <%# CONTENT %>
 <div class="container my-5">
-  <h3>List Overview</h3>
+  <div class="list-overview">
+    <h3 class="list-overview-title">List Overview</h3>
+    <%= link_to "+", new_list_path, id: "round-add-button" %>
+  </div>
   <div class="row row-cols-1 row-cols-md-3">
     <% @lists.each do |list| %>
       <div class="col mb-4">
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= image_path("list_banner.jpg") %>)">
+      <% if list.photo.attached? %>
+        <div class="card-category card-absolute" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, height: 300, crop: :fill %>')">
+      <% else %>
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))">
+      <% end %>
           <p id="movie-title"><%= link_to list[:name], list_path(list.id) %></p>
+          <%= link_to "+", list_path(list),
+                            method: :delete,
+                            data: { confirm: "Are you sure?" }, id: "round-delete-btn" %>
         </div>
       </div>
     <% end %>
   </div>
-  <%= link_to "(+) New List", new_list_path, class: "btn btn-success" %>
 </div>
