--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -32,15 +32,15 @@
     <% @list.bookmarks.each do |bookmark| %>
       <div class="mb-4">
         <div class="card h-100" style="width: 28rem;">
-          <%= cl_image_tag bookmark.photo.key, height: 300, width: 446, crop: :fill %>
+          <img src="<%= bookmark.movie[:poster_url] %>" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column justify-content-between">
             <div>
-              <h5 class="card-title"><%= "#{bookmark.movie[:title]}" %></h5>
+              <h5 class="card-title" id="card-text"><%= "#{bookmark.movie[:title]}" %></h5>
               <p class="card-text" id="card-text"><%= "#{bookmark.movie[:overview]}" %></p>
             </div>
             <div>
               <hr>
-              <p class="card-text"><%= "#{bookmark[:comment]}" %></p>
+              <p class="card-text" id="card-text"><%= "#{bookmark[:comment]}" %></p>
               <%= link_to "Remove", bookmark_path(bookmark),
                             method: :delete,
                             data: { confirm: "Are you sure?" }, class: "btn btn-primary" %>
